fix: Loading Spinner Alignment

--- a/src/app/styles/Forum.module.scss
+++ b/src/app/styles/Forum.module.scss
@@ -114,6 +114,36 @@ $sidebarWidth: 300px;
       padding: 1.2rem;
     }
 
+    .loadingSpinner {
+      margin-top: 4rem;
+      position: relative;
+      transform: translateX(-30px);
+
+      div {
+        transform-origin: 30px 30px;
+        animation: loading 0.8s linear infinite;
+
+        &:after {
+          content: " ";
+          display: block;
+          position: absolute;
+          top: 2.25px;
+          left: 27.75px;
+          width: 4.5px;
+          height: 13.5px;
+          border-radius: 20%;
+          background: #505050;
+        }
+
+        @for $i from 1 through 12 {
+          &:nth-child(#{$i}) {
+            transform: rotate(#{(30 * $i) - 30}deg);
+            animation-delay: #{-0.8 + (0.06 * $i)}s;
+          }
+        }
+      }
+    }
+
     .noPosts {
       @include fillParent;
       @include font($size: 1.8rem, $align: center, $lineHeight: 1.5);
@@ -127,35 +157,6 @@ $sidebarWidth: 300px;
       svg {
         width: 60px;
         height: 60px;
-      }
-
-      .loadingIndicator {
-        display: inline-block;
-        position: relative;
-
-        div {
-          transform-origin: 30px 30px;
-          animation: loading 0.8s linear infinite;
-
-          &:after {
-            content: " ";
-            display: block;
-            position: absolute;
-            top: 2.25px;
-            left: 27.75px;
-            width: 4.5px;
-            height: 13.5px;
-            border-radius: 20%;
-            background: #505050;
-          }
-
-          @for $i from 1 through 12 {
-            &:nth-child(#{$i}) {
-              transform: rotate(#{(30 * $i) - 30}deg);
-              animation-delay: #{-0.8 + (0.06 * $i)}s;
-            }
-          }
-        }
       }
 
       @keyframes loading {
